Commit - 05 - Modified Style Guide + Added intro image

--- a/Portfolio_Main_Site/index.html
+++ b/Portfolio_Main_Site/index.html
@@ -21,7 +21,6 @@
         <a href="index.html#contact" class="nav-main-items" id="projects-nav">Contact</a>
     </nav>
 
-
     <div class="element-container">
         <div class="element-container">
         <p class="intro-text">
@@ -29,11 +28,12 @@
         </p>
 
         <p class="intro-text">
-            Game Designer and 3D Modeller + Animations
+            Game Designer, Character Designer and 3D + Animations
         </p>
         </div>
     </div>
 
+    <img src="Resources/Character_Sheet1.png" class="header-banner" alt="main-banner" id="intro-banner">
 
     <h1 class="element-container header-contents" id="about-me">About Me</h1>
     <div class="justify-centered-left-body-content">
@@ -92,7 +92,7 @@
             </div>
           </section>
       
-          <img src="Resources/Project-Bunker.png" class="img-body-banner" alt="bunker-banner">
+          <img src="Resources/Project-Bunker-Thumbnail1.png" class="img-body-banner" alt="bunker-banner">
 
     <section class="service-offer">
         <h1 class="element-container header-contents" id="contact">Contact</h1>
