--- a/Portfolio_Main_Site/project-flower.html
+++ b/Portfolio_Main_Site/project-flower.html
@@ -39,6 +39,7 @@
         </p>
     </div>
 
+    <h1 class="element-container header-contents">Role</h1>
     <div class="justify-centered-left-body-content">
         <p>
             My role for this project was the project manager, game designer, and 2D animator.
@@ -47,9 +48,11 @@
             first experience with the Unity 3D engine.
         </p>
     </div>
-    <div class="justify-project-body-content">
 
-        <div class="element-container">
+    <h1 class="element-container header-contents">Problem</h1>
+
+    <div class="element-container">
+        <div class="justify-body-content">
             <p>
                 The issue I faced with my task was the 2D animation part. I used the Live2D Engine for 2D animations as
                 part
@@ -60,18 +63,21 @@
                 aesthetic.
             </p>
         </div>
-        <div class="element-container">
-            <img src="Resources/Huntsman.gif" class="project-screenshot" alt="project-flower-huntsman">
+
+        <div class="justify-body-content"> <img src="Resources/Huntsman.gif" class="project-screenshot"
+                alt="project-flower-huntsman">
         </div>
     </div>
 
-    <div class="justify-project-body-content">
-        <div class="element-container">
-            <img src="Resources/Protagonist.gif" class="project-screenshot" id="protagonist"
-                alt="project-flower-protagonist">
+    <h1 class="element-container header-contents">Solution</h1>
+
+    <div class="element-container">
+
+        <div class="justify-body-content"> <img src="Resources/Protagonist.gif" class="project-screenshot"
+                id="protagonist" alt="project-flower-protagonist">
         </div>
 
-        <div class="element-container">
+        <div class="justify-body-content">
             <p>
                 To get around this, I worked on the animation as if it was a standard animation program, meaning I
                 worked on
@@ -86,7 +92,7 @@
             </p>
         </div>
     </div>
-
+    <h1 class="element-container header-contents">Reflection</h1>
     <div class="justify-project-body-content">
         <p>
             While this solution was very clumsily implemented, within Unity Engine it worked great. With great feedback
