--- a/Portfolio_Style_Guide_&_Sample_Templates/project-bunker.html
+++ b/Portfolio_Style_Guide_&_Sample_Templates/project-bunker.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three Corner Interactives</title>
+    <title>Sirawit Yuennan's Portfolio</title>
     <link rel="stylesheet" href="css/texts-style.css">
     <link rel="stylesheet" href="css/image-style.css">
     <link rel="stylesheet" href="css/ui-style.css">
@@ -15,12 +15,11 @@
 
 <body>
 
-    <nav class="nav-main">
-        <a href="Index.html" class="nav-main-items">Home</a>
-        <a href="#the-studio" class="nav-main-items">The Studio</a>
-        <a href="Index.html#projects" class="nav-main-items">Projects</a>
-        <a href="service.html" class="nav-main-items">Services</a>
-        <a href="contact.html" class="nav-main-items">Contact Us</a>
+    <nav class="nav-main element-container">
+        <a href="index.html" class="nav-main-items" id="home-nav"> Home</a>
+        <a href="index.html#about-me" class="nav-main-items" id="bio-nav">About me</a>
+        <a href="index.html#projects" class="nav-main-items" id="projects-nav">Projects</a>
+        <a href="index.html#contact" class="nav-main-items" id="projects-nav">Contact</a>
     </nav>
 
     <div class="element-container">
@@ -29,60 +28,80 @@
         </div>
     </div>
 
-    <div class="inline-bottom-left-text">
-        <p class="banner-text">
-            Three Corner Interactives
+    <h1 class="element-container header-contents">Canvas</h1>
+    <div class="justify-centered-left-body-content">
+        <p>This project was a Virtual Reality project using the Oculus Rift as the medium. The project's objective was
+            to research more about whether a person can reach the same amount of presence they do when they are in the
+            same situation. With a development time of 2 months, this project was created with 3 other people, Daria
+            Kilmaseva (Co-scene designer), Rozhin Kardan (Co-3D modelling artist), and Lee McHale (Co-programmer).
+
         </p>
     </div>
 
-
-    <h1 class="element-container header-contents">Project Bunker</h1>
-    <div class="justify-centered-body-content">
-        <p>This project was a Virtual Reality project using the Oculus Rift as the medium.
-            The project's objective was to research more about whether a person can reach the same amount of presence
-            they do when they are in the same situation. With a development time of 2 months, this project was created
-            with 4
-            people, Sirawit Yuennan (Project Leader, and Programmer), Daria Kilmaseva (Co-scene designer),
-            Rozhin Kardan (Co-3D modelling artist), and Lee McHale (Co-programmer).
-            ​
+    <h1 class="element-container header-contents">Role</h1>
+    <div class="justify-centered-left-body-content">
+        <p>
+            My role for this project was the project manager, co-scene designer, co-modelling artist, and co-programmer.
+            As the project manager, I had to gauge my team member's experiences and their motivations to do the project.
+            From this, I try to assign tasks for them that will not stress them out along with keeping in mind that they
+            have other classes to attend as well. I also noted that should they have any trouble at all with the project
+            or the amount of work, I asked that they should tell me immediately and I would fill in the tasks they could
+            not do. This method worked well, as this keeps the team's morale high despite having very little experience
+            in Unity 3D.
         </p>
     </div>
+
+    <h1 class="element-container header-contents">Problem</h1>
+
     <div class="element-container">
-        <div class="project-thumbnail-container" id="project-flower-box">
-            <div class="imageGrid project-thumbnail-wrapper">
-
-                <img src="Resources/Project-Bunker-Thumbnail1.png" class="project-screenshot" id="trigger"
-                    alt="project-canvas-trigger">
-                <p class="image-description">This was our 3D modelled rooms that was used in the VR program.</p>
-
-            </div>
-            <div class="imageGrid project-thumbnail-wrapper">
-
-                <img src="Resources/Project-Bunker-Thumbnail2.png" class="project-screenshot" id="canvas"
-                    alt="project-canvas-canvas">
-                <p class="image-description">Our VR program relied on a "key" system that when two object collided, it
-                    will check if the
-                    two datatypes of the objects matched.
-                </p>
-
-            </div>
-
-            <div class="imageGrid project-thumbnail-wrapper">
-
-                <img src="Resources/Project-Bunker.png" class="project-screenshot" alt="project-canvas-thumbnail1">
-                <p class="image-description">This was one of our first volunteer to try out our program to play-test it.
-                </p>
-
-            </div>
+        <div class="justify-body-content">
+            <p>
+                The problem, our team first encountered was that our team had no prior experience in using Unity. While
+                our class handled some lessons using Unity, however, it was not enough to complete the project. While
+                efforts were made in trying to learn how to use Unity with little amount of time, unfortunately it was
+                not enough to cover everything we needed for the project.
+            </p>
         </div>
 
+        <div class="justify-body-content"> <img src="Resources/Project-Bunker-Thumbnail1.png" class="project-screenshot"
+                alt="project-flower-huntsman">
+        </div>
+    </div>
+
+    <h1 class="element-container header-contents">Solution</h1>
+
+    <div class="element-container">
+
+        <div class="justify-body-content"> <img src="Resources/Project-Bunker-Thumbnail2.png" class="project-screenshot"
+                id="protagonist" alt="project-flower-protagonist">
+        </div>
+
+        <div class="justify-body-content">
+            <p>
+
+                There were two different solutions I did to help my teammates. First, I tutored them on how to use Unity
+                3D on things our class had not cover. Such as the suggested polycounts for models, how lighting works in
+                Unity, and how the workflow should look like. This was helpful for my teammates as they were able to
+                slowly lighten my load on the amount of tasks I had to do. The second solution was that I handled all
+                the difficult tasks myself in order to save time. This was inevitable, but I certainly did not mind it
+                because I thought of it as improving my skills using Unity.
+            </p>
+        </div>
+    </div>
+    <h1 class="element-container header-contents">Reflection</h1>
+    <div class="justify-project-body-content">
+        <p>
+            VR technology is very delicate and methodical work. The user's experience becomes everything, and a lot more
+            elements had to be considered. For example, the size of the props or the movement controls. When in VR the
+            user could easily experience motion sickness if done incorrectly. Our team tried to avoid this as much as we
+            can through intensive testing to make sure that it does not cause harm to our participants.
+        </p>
     </div>
 
     <div class="element-container empty-block"></div>
     <!-- This creates a footer that can contain texts and images -->
     <div class="footer">
         <p class="justify-footer-content element-container">
-            © 2019 Three Corner Interactives, a company that offer game development service for you.
         </p>
     </div>
 </body>
