--- a/Portfolio_Style_Guide_&_Sample_Templates/project-canvas.html
+++ b/Portfolio_Style_Guide_&_Sample_Templates/project-canvas.html
@@ -17,8 +17,9 @@
 
     <nav class="nav-main element-container">
         <a href="index.html" class="nav-main-items" id="home-nav"> Home</a>
-        <a href="index.html#bio" class="nav-main-items" id="bio-nav">About me</a>
+        <a href="index.html#about-me" class="nav-main-items" id="bio-nav">About me</a>
         <a href="index.html#projects" class="nav-main-items" id="projects-nav">Projects</a>
+        <a href="index.html#contact" class="nav-main-items" id="projects-nav">Contact</a>
     </nav>
 
     <div class="element-container">
@@ -30,48 +31,61 @@
     <h1 class="element-container header-contents">Canvas</h1>
 
     <div class="element-container video-url">
-    <iframe width="720" height="520" src="https://www.youtube.com/embed/vux8WYP_LEs">
-    </iframe>
+        <iframe width="720" height="480" src="https://www.youtube.com/embed/vux8WYP_LEs">
+        </iframe>
     </div>
 
     <div class="justify-centered-left-body-content">
-        <p> This project was an arcade mobile game in a form of an "endless runner" with simple controls and mechanics
+        <p>This project was an arcade mobile game in a form of an "endless runner" with simple controls and mechanics
             that can be picked up and played by non-gamers. This game was created using Unity 3D. The 3D art assets were
             created using Blender, while the 2D assets were created using Clip Studio.
+
         </p>
     </div>
 
-    <div class="justify-centered-left-body-content">
-        <p>
-            The development time for this project was one month from 4 months and with a team of 4.
-            It becomes a massive issue as my experience was not at
-            the level I was comfortable with to create such a project and I didn't have a team to rely on.
-            With such a small development window, I had to manage my time
-            carefully. Not only I had to design the game with the players in mind but my own abilities and limitations
-            as well. This would mean that my own creativity in designs would be hindered by my skills.
-        </p>
+
+    <h1 class="element-container header-contents">Problem</h1>
+
+    <div class="element-container">
+        <div class="justify-body-content">
+            <p>
+                The development time for this project was one month from 4 months and with a team of 4. It becomes a
+                massive
+                issue as my experience was not at the level I was comfortable with to create such a project and I didn't
+                have a team to rely on. With such a small development window, I had to manage my time carefully. Not
+                only I
+                had to design the game with the players in mind but my own abilities and limitations as well. This would
+                mean that my own creativity in designs would be hindered by my skills.
+            </p>
+        </div>
+
+        <div class="justify-body-content"> <img src="Resources/Project-Canvas-thumbnail1.png" class="project-screenshot"
+                alt="project-flower-huntsman">
+        </div>
     </div>
+
+    <h1 class="element-container header-contents">Solution</h1>
+
+    <div class="element-container">
+
+        <div class="justify-body-content"> <img src="Resources/ShipSS.png" class="project-screenshot" id="protagonist"
+                alt="project-flower-protagonist">
+        </div>
+
+        <div class="justify-body-content">
+            <p>
+                The condition I set for myself is that it must have a core loop that is small and engaging enough for
+                the players. While the programming tasks must be within my skill level. Lastly, it should look polished
+                with appealing aesthetic to create a visual appeal.
+            </p>
+        </div>
+    </div>
+    <h1 class="element-container header-contents">Reflection</h1>
     <div class="justify-project-body-content">
-
         <p>
-            The condition I set for myself is that it must have a core loop that is small and engaging
-            enough for the players. While the programming tasks must be within my skill level.
-            Lastly, it should look polished with appealing aesthetic to create a visual appeal.
-        </p>
-
-
-
-        <img src="Resources/ShipSS.png" class="project-screenshot" id="ship" alt="project-bunker-ship">
-    </div>
-
-    <div class="justify-project-body-content">
-
-        <img src="Resources/Project-Canvas-thumbnail1.png" class="project-screenshot" id="thumbnail"
-            alt="project-bunker-thumbnail">
-        <p>
-            Following these 3 principles, I was able to finish the project in time with a positive feedback
-            and amazements by both my peers and professor to be able to pull of a project in such a handicapped
-            situation. Although there were still some concerns with the design, they can easily be solved.
+            Following these 3 principles, I was able to finish the project in time with a positive feedback and
+            amazements by both my peers and professor to be able to pull of a project in such a handicapped situation.
+            Although there were still some concerns with the design, they can easily be solved.
         </p>
     </div>
 
