--- a/Portfolio_Style_Guide_&_Sample_Templates/project-flower.html
+++ b/Portfolio_Style_Guide_&_Sample_Templates/project-flower.html
@@ -17,8 +17,9 @@
 
     <nav class="nav-main element-container">
         <a href="index.html" class="nav-main-items" id="home-nav"> Home</a>
-        <a href="index.html#bio" class="nav-main-items" id="bio-nav">About me</a>
+        <a href="index.html#about-me" class="nav-main-items" id="bio-nav">About me</a>
         <a href="index.html#projects" class="nav-main-items" id="projects-nav">Projects</a>
+        <a href="index.html#contact" class="nav-main-items" id="projects-nav">Contact</a>
     </nav>
 
     <div class="element-container">
@@ -38,6 +39,7 @@
         </p>
     </div>
 
+    <h1 class="element-container header-contents">Role</h1>
     <div class="justify-centered-left-body-content">
         <p>
             My role for this project was the project manager, game designer, and 2D animator.
@@ -46,36 +48,51 @@
             first experience with the Unity 3D engine.
         </p>
     </div>
-    <div class="justify-project-body-content">
 
-        <p>
-            The issue I faced with my task was the 2D animation part. I used the Live2D Engine for 2D animations as part
-            of gameplay. However,
-            this engine was not meant to be used to create as part of gameplay but as a visual aesthetic such as
-            creating movements in the background.
-            Live2D Engines are mostly used to create animations for a 2D character portrait, and again for visual
-            aesthetic.
-        </p>
+    <h1 class="element-container header-contents">Problem</h1>
 
+    <div class="element-container">
+        <div class="justify-body-content">
+            <p>
+                The issue I faced with my task was the 2D animation part. I used the Live2D Engine for 2D animations as
+                part
+                of gameplay. However,
+                this engine was not meant to be used to create as part of gameplay but as a visual aesthetic such as
+                creating movements in the background.
+                Live2D Engines are mostly used to create animations for a 2D character portrait, and again for visual
+                aesthetic.
+            </p>
+        </div>
 
-
-        <img src="Resources/Huntsman.gif" class="project-screenshot" alt="project-flower-huntsman">
+        <div class="justify-body-content"> <img src="Resources/Huntsman.gif" class="project-screenshot"
+                alt="project-flower-huntsman">
+        </div>
     </div>
 
-    <div class="justify-project-body-content">
-        <img src="Resources/Protagonist.gif" class="project-screenshot" id="protagonist"
-            alt="project-flower-protagonist">
-        <p>
-            To get around this, I worked on the animation as if it was a standard animation program, meaning I worked on
-            it
-            by translating body parts manually at a certain time frame to create movements. This also includes the hair
-            of the character
-            which I had to split the hair into multiple sections to simulate a flowing movement instead of moving the
-            entire hair.
-            Then I export the animation in png frames and construct them in Unity as animation by frames.
-        </p>
-    </div>
+    <h1 class="element-container header-contents">Solution</h1>
 
+    <div class="element-container">
+
+        <div class="justify-body-content"> <img src="Resources/Protagonist.gif" class="project-screenshot"
+                id="protagonist" alt="project-flower-protagonist">
+        </div>
+
+        <div class="justify-body-content">
+            <p>
+                To get around this, I worked on the animation as if it was a standard animation program, meaning I
+                worked on
+                it
+                by translating body parts manually at a certain time frame to create movements. This also includes the
+                hair
+                of the character
+                which I had to split the hair into multiple sections to simulate a flowing movement instead of moving
+                the
+                entire hair.
+                Then I export the animation in png frames and construct them in Unity as animation by frames.
+            </p>
+        </div>
+    </div>
+    <h1 class="element-container header-contents">Reflection</h1>
     <div class="justify-project-body-content">
         <p>
             While this solution was very clumsily implemented, within Unity Engine it worked great. With great feedback
